--- a/pages/pannel.html
+++ b/pages/pannel.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-    <title>Make A Container!</title>
+    <title>Wubwuba</title>
 </head>
 
 <body>
-    <h1>Make Container</h1>
+    <h1>Manage Container</h1>
     <button id="stopContainer" onclick="stopContainer">Stop Container</button>
 </body>
 
