--- a/pages/pannel.html
+++ b/pages/pannel.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Manage Container</title>
-    <script src="scripts/DockerFunctions.js"></script>
+    <script src="scripts/containerFunctions.js"></script>
 </head>
 
 <body>
