--- a/pages/pannel.html
+++ b/pages/pannel.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Manage Container</h1>
-    <form action="/stop-container" method="post">
+    <form id="stopContainerForm">
         <label for="username">Server name:</label>
         <input type="text" id="containerName" name="username" required>
         <button type="submit">Stop Container</button>
