Fixed stop function

--- a/pages/pannel.html
+++ b/pages/pannel.html
@@ -2,16 +2,49 @@
 
 <head>
     <title>Manage Container</title>
-    <script src="scripts/containerFunctions.js"></script>
+    <!--<script type="application/javascript" src="scripts/containerFunctions.js"></script> -->
 </head>
 
 <body>
     <h1>Manage Container</h1>
     <form id="stopContainerForm">
         <label for="username">Server name:</label>
-        <input type="text" id="containerName" name="username" required>
+        <input type="text" id="containerName" name="containerName" required>
         <button type="submit">Stop Container</button>
     </form>
 </body>
+
+<script>
+    //const { json, response } = require("express");
+
+    document.getElementById('stopContainerForm').addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        console.log("Received stop request");
+        const containerName = document.getElementById('containerName').value;
+
+        console.log(containerName);
+
+        const res = fetch('/stop-container', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body:
+                JSON.stringify({ containerName })
+        })
+
+            .then(res => {
+                if (res.ok) {
+                    return res.text();
+                } else {
+                    throw new Error('Error stopping container');
+                }
+            })
+            .then(data => {
+                status.textContent = data;
+            });
+    });
+</script>
 
 </html>
