Made modules more moduler

--- a/pages/panel.html
+++ b/pages/panel.html
@@ -10,7 +10,7 @@
     <label for="containerName">Server name:</label>
     <input type="text" id="containerName" name="containerName" required>
     <button class="containerReq" type="submit" id="stop" onClick="serverReq(this.id)">Stop Container</button>
-    <button class="containerReq" type="submit" id="run" onClick="serverReq(this.id)">Run Container</button>
+    <button class="containerReq" type="submit" id="start" onClick="serverReq(this.id)">Start Container</button>
 
     <p id="status">Null</p>
 </body>
