Updated UI and other general updates

--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <html>
 
 <head>
-    <title>Make A Container</title>
+    <title>Launch</title>
 </head>
 
 <body>
-    <h1>Make Container</h1>
-    <form action="/create-container" method="post">
-        <label for="username">Server name:</label>
-        <input type="text" id="username" name="username" required>
-        <button type="submit">Create Container</button>
-    </form>
+   <a href="/panel"> <button>Launch</button> </a>
 </body>
 
 </html>
