--- a/pages/panel.html
+++ b/pages/panel.html
@@ -3,7 +3,7 @@
 <head>
   <title>Manage Container</title>
   <script type="application/javascript" src="scripts/containerFunctions.js"></script>
-  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/panel.css">
 </head>
 
 <body>
