--- a/pages/create-container.html
+++ b/pages/create-container.html
@@ -43,14 +43,18 @@
 
   <form action="/build-container" method="post">
     <div class="form-items">
+      <div class="form-split">
       <input type="text" placeholder="Image" id="image" name="image" required>
-      <input type="text" placeholder="Server Name" id="containerName" name="containerName" required>
+      <a href="https://hub.docker.com/" target="_blank"><svg id="search" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg></a>
+    </div>
+      <input type="text" placeholder="Container Name" id="containerName" name="containerName" required>
       <div class="form-split">
         <input type="text" placeholder="Port" id="port" name="port">
         <p>/</p>
         <input type="text" placeholder="Type" id="protocol" name="protocol">
       </div>
       <input type="text" placeholder="Directory" id="directory" name="directory">
+      <input type="text" placeholder="Env: 'FOO=TRUE', 'BAR=FALSE'" id="env" name="env"></input>
       <hr>
       <button class="containerReq" type="submit">Create Container</button>
     </div>
