--- a/pages/panel.html
+++ b/pages/panel.html
@@ -43,7 +43,7 @@
   <div class="containers">
     <div class="container">
       <div class="container-items">
-      <input type="text" placeholder="Server Name" id="containerName" name="containerName" required>
+      <input type="text" placeholder="Container Name" id="containerName" name="containerName" required>
       <button class="containerReq" id="" onClick="">Edit</button>
       <button class="containerReq" id="stop" onClick="containerReq(this.id)">Stop</button>
       <button class="containerReq" id="start" onClick="containerReq(this.id)">Start</button>
