Building json data

--- a/pages/create-container.html
+++ b/pages/create-container.html
@@ -54,7 +54,7 @@
         <input type="text" placeholder="Type" id="protocol" name="protocol">
       </div>
       <input type="text" placeholder="Directory" id="directory" name="directory">
-      <input type="text" placeholder="Env: 'FOO=TRUE', 'BAR=FALSE'" id="env" name="env"></input>
+      <input type="text" placeholder="Env: FOO=TRUE, BAR=FALSE" id="env" name="env"></input>
       <hr>
       <button class="containerReq" type="submit">Create Container</button>
     </div>
