--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="stylesheet" href="src/index.css">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="wub"
     />
     <title>Docker Panel</title>
   </head>
-  <body>
+  <body id="root">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
     <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
