--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,9 @@
     />
     <title>Docker Panel</title>
   </head>
-  <body id="root">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <wrapper id="root"></wrapper>
     <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
